--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Testangular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <!-- <link rel="icon" type="icon" href="C:\Users\monal\OneDrive\Documents\mine\knowIt\githubPages\MyProfile\angular\src\J-icon.png" /> -->
+  <link rel="icon" type="image/x-icon" href="J-icon.png">
 </head>
 <body>
   <app-root></app-root>
